@startuml
skinparam classAttributeIconSize 0
hide empty methods
hide empty fields

left to right direction

package "Clientes e Funcionários" {
    class Cliente {
      +id: Long
      +senha: String
      +nome: String
      +email: String
      +telefone: String
      +endereco: String
    }

    class Funcionario {
      +id: Long
      +nome: String
      +senha: String
      +email: String
      +cargo: String
    }
}

package "Carrinho e Venda" {
    class Carrinho {
      +id: Long
      +total: BigDecimal
    }

    class ItemCarrinho {
      +quantidade: Int
    }

    class Venda {
      +id: Long
      +data: Date
      +valorTotal: BigDecimal
    }

    class ItemVenda {
      +quantidade: Int
      +precoUnitario: BigDecimal
    }
}

package "Catálogo de Produtos" {
    class Produto {
      +id: Long
      +nome: String
      +descricao: String
      +preco: BigDecimal
      +ativo: Boolean
    }

    class Categoria {
      +id: Long
      +nome: String
      +descricao: String
    }

    class ImagemProduto {
      +url: String
      +principal: Boolean
    }

    class Estoque {
      +quantidade: Int
      +limiteMinimo: Int
    }
}

package "Pagamento e Promoções" {
    class Pagamento {
      +metodo: String
      +status: String
    }

    class CupomDesconto {
      +codigo: String
      +percentual: Double
      +dataValidade: Date
    }
}

' ===== RELACIONAMENTOS =====

Carrinho --> Cliente : pertence a
Carrinho  --> ItemCarrinho : contém
ItemCarrinho --> Produto : refere-se a

Venda  -->  ItemVenda : contém
ItemVenda --> Produto : vendido
Venda --> Cliente : para
Venda --> Pagamento : pagamento
Venda --> CupomDesconto : usa (opcional)

Produto --> Categoria : pertence a
Produto --> Estoque : possui
Produto --> ImagemProduto : possui
Funcionario --> Produto : gerencia

@enduml
